--- a/webd/index.html
+++ b/webd/index.html
@@ -16,7 +16,7 @@ slect content open command pallete and search toggle word wrap for better readin
     <h3>heading 3 ... 6 </h3>
     <a href="https://crex.com/">crex link </a>
     <br/>
-    <a href="https://chatgpt.com/">google </a>
+    <a href="https://chatgpt.com/">ai_bot</a>
     <br/>
     <a href="/test.html">to test</a>
     <hr>
@@ -39,6 +39,18 @@ slect content open command pallete and search toggle word wrap for better readin
       <small>small text </small>
       <br>
       <p>H <sub>2</sub>O</p>
+      <p>A <sup>n</sup></p> 
+      <p>
+        hi     hello
+
+        and 
+      </p>
+      pre tag allows spaces etc ,which normally doesnt counts in p tag 
+      <pre>hi    and
+        
+        hello
+      </pre>
+
 </body>
 </html>
 
