--- a/webd/final.html
+++ b/webd/final.html
@@ -81,6 +81,8 @@ unordered ordered
 </body>
 </html>
 
+<li>List </li>
+
 <br>
 <!-- Forms -->
  <form action="/action.php">
@@ -88,5 +90,4 @@ unordered ordered
     <input type="password" placeholder="password">
     <input type="radio" value="male" name="gender"> Male
     <input type="radio" value="female" name="gender">Female
-    
  </form>
