--- a/webd/index.html
+++ b/webd/index.html
@@ -26,6 +26,12 @@ slect content open command pallete and search toggle word wrap for better readin
      <!-- if link is wrong or image not loaded due to no internet the alt tells about that 
       and we can use for image too -->
       <hr>
+      <br>
+      <iframe  width="560" height="315" src="https://www.youtube.com/embed/HcOc7P5BMi4?si=KUWVHQen0AbtTc9I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0"></iframe>
+      <br>
+      <iframe widht="445" height="300" src="https://www.wikipedia.org/" frameborder="0"></iframe>
+      <br>
+      <!-- video -->
       <br/>
       <b>bold</b>
       <br>
