--- a/webd/index.html
+++ b/webd/index.html
@@ -31,7 +31,9 @@ slect content open command pallete and search toggle word wrap for better readin
       <br>
       <iframe widht="445" height="300" src="https://www.wikipedia.org/" frameborder="0"></iframe>
       <br>
+      <br>
       <!-- video -->
+       <video width="233" height="211" src="" controls >my video </video>
       <br/>
       <b>bold</b>
       <br>
