--- a/webd/html/index.html
+++ b/webd/html/index.html
@@ -18,7 +18,7 @@ slect content open command pallete and search toggle word wrap for better readin
     <br/>
     <a href="https://chatgpt.com/">ai_bot</a>
     <br/>
-    <a href="/test.html">to test</a>
+    <a href="test.html">to test</a>
     <hr>
      <!-- hr is horizontal ruler  -->
     <!-- / is because its relative  -->
