--- a/webd/practice/pr.html
+++ b/webd/practice/pr.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="pr.css">
 </head>
 <body>
-    <p>hello there</p>
+    <div>this is good </div>
+    <button>click</button>
 </body>
 </html>
