--- a/webd/css/index.html
+++ b/webd/css/index.html
@@ -16,5 +16,9 @@
     <p class="myclass">this is a heading</p>
     <button>click</button>
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur officiis molestias quibusdam sit provident sed debitis molestiae rerum cumque quaerat accusamus esse, vitae temporibus assumenda commodi illum placeat</h2>
+    <div id="box1">
+        box1
+        <div id="box2"> box2 </div>
+    </div>
 </body>
 </html>
