--- a/webd/practice/pr.html
+++ b/webd/practice/pr.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="pr.css">
 </head>
 <body>
-    <div>this is good </div>
-    <button>click</button>
+    <div id="outer">
+        <div id="inner">
+        </div>
+    </div>
+
 </body>
 </html>
